syntax = "proto3";

option csharp_namespace = "User";

service UserData{
	rpc GetUserData(SendUserData) returns (Reply); 
}

message SendUserData{
	string name = 1;
	string cnp = 2;
}

message Reply{
	string message = 1;
}